--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+apscheduler>=3.6.3
+dataclasses-config==0.3.1
 dataclasses-json==0.3.2
 dataclasses>=0.6;python_version=="3.6"
 functional-python>=0.0.3
